[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/start_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/UI assets/white_panel.png" type="Texture" id=2]
[ext_resource path="res://assets/UI assets/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/UI assets/Xerox Sans Serif Narrow Bold Oblique.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/UI assets/white_button.png" type="Texture" id=5]
[ext_resource path="res://assets/UI assets/icons_128x128.png" type="Texture" id=6]
[ext_resource path="res://assets/UI assets/play.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]

font/size = 80
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 4 )
fallback/0 = ExtResource( 3 )

[node name="start_screen" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 650, 450 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 200.0
margin/top = 70.0
margin/right = 174.0
margin/bottom = 80.0

[node name="Patch9Frame" type="Patch9Frame" parent="MarginContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 0.0
margin/right = 650.0
margin/bottom = 450.0
texture = ExtResource( 2 )
modulate = Color( 0.828764, 0.313705, 0.902344, 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Patch9Frame"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 20.0
margin/right = 20.0
margin/bottom = 20.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Patch9Frame/MarginContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 0.0
margin/right = 602.0
margin/bottom = 410.0
alignment = 0

[node name="text" type="HBoxContainer" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 594.0
margin/bottom = 203.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/text"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 66.0
margin/top = 63.0
margin/right = 528.0
margin/bottom = 140.0
custom_fonts/font = SubResource( 1 )
text = "BATTLE MAGE"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="buttons" type="HBoxContainer" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 207.0
margin/right = 594.0
margin/bottom = 410.0
alignment = 1

[node name="settings" type="TouchScreenButton" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/buttons"]

editor/display_folded = true
transform/pos = Vector2( 430, 35 )
transform/scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="tex" type="Sprite" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/buttons/settings"]

transform/pos = Vector2( 123.033, 112.831 )
texture = ExtResource( 5 )
modulate = Color( 0.523711, 0.278778, 0.566406, 1 )

[node name="icon" type="Sprite" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/buttons/settings"]

transform/pos = Vector2( 124.487, 114 )
transform/scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 6 )
vframes = 8
hframes = 8
frame = 1
modulate = Color( 0.814087, 0.922443, 0.964844, 1 )

[node name="play" type="TouchScreenButton" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/buttons"]

transform/pos = Vector2( 235.75, 21.1494 )
transform/scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="tex" type="Sprite" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/buttons/play"]

transform/pos = Vector2( 123.033, 112.831 )
transform/scale = Vector2( 1.01, 1.01 )
texture = ExtResource( 5 )
modulate = Color( 0.61438, 0.0828552, 0.707031, 1 )

[node name="play" type="Sprite" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/buttons/play"]

transform/pos = Vector2( 130, 113.959 )
transform/scale = Vector2( 0.58, 0.58 )
texture = ExtResource( 7 )
modulate = Color( 0.814087, 0.922443, 0.964844, 1 )

[node name="trophy" type="TouchScreenButton" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/buttons"]

editor/display_folded = true
transform/pos = Vector2( 65, 35 )
transform/scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="tex" type="Sprite" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/buttons/trophy"]

transform/pos = Vector2( 123.033, 112.831 )
texture = ExtResource( 5 )
modulate = Color( 0.521569, 0.278431, 0.564706, 1 )

[node name="icon" type="Sprite" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/buttons/trophy"]

transform/pos = Vector2( 121, 114 )
transform/scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 6 )
vframes = 8
hframes = 8
frame = 30
modulate = Color( 0.814087, 0.922443, 0.964844, 1 )

[connection signal="pressed" from="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/buttons/settings" to="." method="_on_settings_pressed"]

[connection signal="pressed" from="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/buttons/play" to="." method="_on_play_pressed"]

[connection signal="pressed" from="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/buttons/trophy" to="." method="_on_trophy_pressed"]


